logs/syntax_error_2025-04-06_15-24-29.log
[SYNTAX ERROR]   File "projects/gtk_chat_client/chat_client.py", line 1
    Here's the revised Python code incorporating the feedback:
        ^
SyntaxError: unterminated string literal (detected at line 1)
